Set VichUploder + Update Fixtures + removed picsum-provider lib

--- a/templates/_parts/card/author.html.twig
+++ b/templates/_parts/card/author.html.twig
@@ -2,9 +2,9 @@
 
 	<hr>
 
-	{% if author.avatar is defined %}
+	{% if author.avatar is not null %}
 		<div class="card_avatar">
-			<img src="{{ author.avatar }}" alt="Avatar of author: {{ author.fullName }}">
+			<img src="{{ vich_uploader_asset(author, 'avatarFile') }}" alt="Avatar of author: {{ author.fullName }}">
 		</div>
 	{% endif %}
 
