--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,5 +38,9 @@
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
+    <div class="register_link">
+        <span>Don't have an account? </span>
+        <a href="{{ path('author_register') }}">Register</a>
+    </div>
 </form>
 {% endblock %}
