--- a/templates/lesson/show.html.twig
+++ b/templates/lesson/show.html.twig
@@ -10,7 +10,7 @@
 		<span>{{ lesson.createdAt|date('m/d/Y') }}</span>
 		{% if lesson|hasApprovedAuthor %}
 			<span> | By </span>
-			<a href="{{ path('author_lessons', {'id': lesson.author.id}) }}">{{ lesson.author.fullName }}</a>
+			<a href="{{ path('author_lessons', {'id': lesson.author.id}) | imagine_filter('large') }}">{{ lesson.author.fullName }}</a>
 		{% endif %}
 	</div>
 
