--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -6,7 +6,7 @@
 
 	{% if post.mainImage is not null %}
 		<div class="show_img">
-			<img src="{{ vich_uploader_asset(post, 'mainImageFile') }}" alt="Image for post: {{ post.title }}">
+			<img src="{{ vich_uploader_asset(post, 'mainImageFile') | imagine_filter('large') }}" alt="Image for post: {{ post.title }}">
 		</div>
 	{% endif %}
 
