Added tech: 'Improve config & options system

--- a/templates/lesson/show.html.twig
+++ b/templates/lesson/show.html.twig
@@ -59,6 +59,8 @@
 		</div>
 	{% endif %}
 
-	{% include "_parts/comments_section.html.twig" with {postType: lesson} %}
+	{% if config('SHOW_COMMENTS_ON_LESSON') %}
+		{% include "_parts/comments_section.html.twig" with {postType: lesson} %}
+	{% endif %}
 
 {% endblock %}
