--- a/templates/_elements/breadcrumb.html.twig
+++ b/templates/_elements/breadcrumb.html.twig
@@ -1,4 +1,4 @@
-{# You must define a 'page_breadcrumb' variable in each page template: 
+{# You must define a 'breadcrumb' variable in each page template: 
     {% set breadcrumb = [
         { label: 'Home', url: '#'},
         { ... },
