--- a/templates/contact/_index.html.twig
+++ b/templates/contact/_index.html.twig
@@ -14,7 +14,7 @@
 
 {% set page_title = 'Contact' %}
 {# {% set page_desc = "Let's keep in touch." %} #}
-{% set page_breadcrumb = [
+{% set breadcrumb = [
     {label: 'Home', url: '/'},
     {label: 'Contact', active: true}
 ] %}
