--- a/assets/sass/_typography.scss
+++ b/assets/sass/_typography.scss
@@ -136,3 +136,11 @@ fieldset,
 form { margin-bottom: 30px; }
 
 small { font-family: $body-font; }
+
+.page_headline {
+	font-weight: 300;
+	font-size: 20px;
+	line-height: 30px;
+	color: #777777;
+	padding-bottom: 3rem;
+}
