--- a/templates/_elements/blog-collection-item-1.html.twig
+++ b/templates/_elements/blog-collection-item-1.html.twig
@@ -27,7 +27,8 @@
 {% set hasCategories = post.categories is defined and post.categories|length > 0 ? true : false %}
 {% set showComments = post.comments is defined and post.comments is same as(true) ? true : false %}
 
-{# Render #}
+
+{# Blog collection Item - Design n°1 ===================================================== #}
 
 <article class="portfolio-item col-md-4 col-sm-6 col-12{{ categoriesClasses }}">
     <div class="grid-inner">
@@ -57,7 +58,7 @@
                         <li><i class="icon-calendar3"></i>{{ post.createdAt }}</li>
                     {% endif %}
                     {% if showAuthor %}
-                        <li><a href="{# {{ path('author_index', {id: post.author.id}) }} #}"><i class="icon-user-alt"></i>{{ post.author.name }}</a></li>
+                        <li><a href="{# {{ path('author_index', {id: post.author.id}) }} #}"><i class="icon-user1"></i>{{ post.author.name }}</a></li>
                     {% endif %}
                     {% if showComments %}
                         <li><i class="icon-comments"></i>{{ post.comments }}</li>
