--- a/templates/_elements/blog-collection-item-2.html.twig
+++ b/templates/_elements/blog-collection-item-2.html.twig
@@ -1,12 +1,19 @@
-{% set hasComments = post.comments is defined and post.comments > 0 ? true : false %}
+{% set defaultMainImage = 'placeholder.png' %}
+
+{% set hasComments = post.comments is defined and post.comments|length > 0 ? true : false %}
+{% set hasMainImage = post.mainImage is defined and post.mainImage|length > 0 ? true : false %}
+{% set mainImage = hasMainImage ? uploadUrl('UPLOADS_POSTS', post.mainImage) : uploadUrl('UPLOADS_POSTS', defaultMainImage) %}
 {% set categoriesClasses = '' %}
 {% if post.categories is defined and post.categories|length > 0 %}
-    {% set categoriesClasses %}{% for category in post.categories %}{{ ' ' ~ category.2 }}{% endfor %}{% endset %}
+    {% set categoriesClasses %}{% for category in post.categories %}{{ ' ' ~ category.slug }}{% endfor %}{% endset %}
 {% endif %}
 
+
+{# Blog collection Item - Design n°2 ===================================================== #}
+
 <article class="col-md-4 g-1 grid-item{{ categoriesClasses }}">
-    <a href="{{ path('blog_show') }}">
-        <div style="background: linear-gradient(to bottom, transparent, rgba(0,0,0,.3) 75%, rgba(0,0,0,0.9) 100%), url('{{ post.mainImage }}') no-repeat center center / cover; height: 400px">
+    <a href="{{ path('post_show', {id: post.id, slug: post.slug}) }}">
+        <div style="background: linear-gradient(to bottom, transparent, rgba(0,0,0,.3) 75%, rgba(0,0,0,0.9) 100%), url('{{ mainImage }}') no-repeat center center / cover; height: 400px">
             <div class="bg-overlay position-relative">
                 <div class="bg-overlay-content flex-column justify-content-end align-items-start px-5 py-4 dark">
                     <div class="entry-meta mb-3">
@@ -14,7 +21,7 @@
                             <li>{{ post.author }}</li>
                             <li>{{ post.createdAt|date('M j, Y') }}</li>
                             {% if hasComments %}
-                                <li><i class="icon-comments"></i>{{ post.comments }}</li>
+                                <li><i class="icon-comments"></i>{{ post.comments|length }}</li>
                             {% endif %}
                         </ul>
                     </div>
