--- a/templates/_layout/post.html.twig
+++ b/templates/_layout/post.html.twig
@@ -1,16 +1,21 @@
 {% extends "base.html.twig" %}
 
-{% set whiteLogo = true %}
-{% set showPostNavigation = blogpost_showPostNavigation is defined and blogpost_showPostNavigation is same as(true) ? true : false %}
-{% set showAuthor = blogpost_showAuthor is defined and blogpost_showAuthor is same as(true) ? true : false %}
-{% set showComments = blogpost_showComments is defined and blogpost_showComments is same as(true) ? true : false %}
+{# /!\ 
+    All variables are defined inside the page template: '<posttype>/show.html.twig'
+    Go to this template to get the variables list 
+#}
+
+{% set author_routeName = 'author_posts' %}
+
+{# Prepare #}
+
+{% set showPostNavigation = showPostNavigation is defined and showPostNavigation is same as(true) ? true : false %}
+{% set showAuthor = post|hasApprovedAuthor and showAuthor is defined and showAuthor is same as(true) ? true : false %}
+{% set showComments = showComments is defined and showComments is same as(true) ? true : false %}
 {% set hasAfterContent = showPostNavigation or showAuthor or showComments ? true : false %}
 
-{% block hero %}
 
-    {% include "_sections/title-page.html.twig" %}
-    
-{% endblock %}
+{# Post layout ============================================================ #}
 
 {% block main %}
 
@@ -26,7 +31,7 @@
                             <div class="entry-content mt-3">
                     {% endif %}
 
-                                {% block page_content %}{% endblock %}
+                    {% block content %}{% endblock %}
 
                     {% if hasAfterContent %}
                             </div>
@@ -36,24 +41,22 @@
                     {% if hasAfterContent %}
 
                         {% if showPostNavigation %}
-                            {% include "_sections/posttype/post-navigation.html.twig" with {
-                                prevPost: {
-                                    title: 'Pariatur aspernatur debitis neque',
-                                    url: path('blog_show')
-                                },
-                                nextPost: {
-                                    title: 'Totam hic molestias facilis odio eligendi',
-                                    url: path('blog_show')
-                                }
+                            {% include "_sections/posttype/post-navigation.html.twig" with { 
+                                prevNextLinks: prevNextLinks 
                             } %}
                         {% endif %}
 
                         {% if showAuthor %}
-                            {% include "_sections/posttype/author-box.html.twig" %}
+                            {% include "_sections/posttype/author-box.html.twig" with { 
+                                author: post.author,
+                                author_routeName: author_routeName
+                            } %}
                         {% endif %}
 
                         {% if showComments %}
-                            {% include "_sections/posttype/comments.html.twig" %}
+                            {% include "_sections/posttype/comments.html.twig" with { 
+                                comments: post.comments 
+                            } %}
                         {% endif %}
 
                     {% endif %}
