--- a/templates/post_category/_index.html.twig
+++ b/templates/post_category/_index.html.twig
@@ -4,14 +4,9 @@
 
 {% block title %}Blog{% endblock %}
 
-{% block javascripts %}
-	{{ parent() }}
-	{{ encore_entry_script_tags('collection') }}
-{% endblock %}
-
 {% set page_title = 'Blog' %}
 {% set page_desc = 'The lastest news from the world currated by experts.' %}
-{% set page_breadcrumb = [
+{% set breadcrumb = [
     {label: 'Home', url: '/'},
     {label: 'Blog', active: true}
 ] %}
