--- a/templates/project/_show.html.twig
+++ b/templates/project/_show.html.twig
@@ -1,51 +1,68 @@
-{# Ref: https://themes.semicolonweb.com/html/canvas/block-blog-single-2.html #}
-
 {% extends '_layout/project.html.twig' %}
 
-{% block title %}Portfolio{% endblock %}
+{% block title %}{{ project.title }}{% endblock %}
 
-{% block javascripts %}
-	{{ parent() }}
-	{{ encore_entry_script_tags('content') }}
+{% block main %}
 
-	{{ encore_entry_script_tags('slider') }}
-{% endblock %}
+	<div class="show_img">
+		<img src="{{ vich_uploader_asset(project, 'mainImageFile') | imagine_filter('large') }}" alt="Image for project: {{ project.title }}">
+	</div>
 
-{% block stylesheets %}
-	{{ parent() }}
-	{{ encore_entry_link_tags('ui') }}
-{% endblock %}
- 
-{% set page_title = 'This is a standard project' %}
-{% set page_breadcrumb = [
-    {label: 'Home', url: path('home')},
-    {label: 'Portfolio', url: path('portfolio')},
-    {label: page_title, active: true}
-] %}
-{% set page_project = {
-    mainImage: asset('build/images/blog/show/1.jpg'),
-    createdAt: '10th July 2021',
-    author: 'admin',
-    comments: [
-        {
-            author: 'Edouard Proust',
-            createdAt: date(),
-            content: 'Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde nulla accusantium similique. Impedit deleniti velit unde aut! Itaque labore hic dolore, incidunt pariatur, neque, quam error temporibus ullam qui animi!'
-        },{
-            author: 'Edouard Proust',
-            createdAt: date(),
-            content: 'Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde nulla accusantium similique. Impedit deleniti velit unde aut! Itaque labore hic dolore, incidunt pariatur, neque, quam error temporibus ullam qui animi!'
-        },
-    ]
-} %}
-{% set project_showPostNavigation = true %}
-{% set project_showAuthor = true %}
-{% set project_showComments = true %}
+	<h1>{{ project.title }}</h1>
 
-{% block page_content %}
+	<div class="show_data">
+		<span>{{ project.createdAt|date('m/d/Y') }}</span>
+		{% if project|hasApprovedAuthor %}
+			<span> | By </span>
+			<a href="{{ path('author_projects', {'id': project.author.id}) }}">{{ project.author.fullName }}</a>
+		{% endif %}
+	</div>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, labore deserunt ex cupiditate est blanditiis dignissimos nesciunt doloremque laboriosam ullam necessitatibus voluptatum tempora itaque quia porro voluptates quo excepturi veritatis!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, sed.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, soluta explicabo sunt aliquam officiis autem.</p>
+	{% if project.categories|length > 0 %}
+		<div class="show_pills">
+			<div class="pills-list">
+				<span>In:
+				</span>
+				{% for category in project.categories %}
+					<a class="pill" href="{{ path('project_category', {slug:category.slug}) }}">
+						{{ category.label }}
+					</a>
+				{% endfor %}
+			</div>
+		</div>
+	{% endif %}
+
+	{% if project.codingLanguages|length > 0 %}
+		<div class="card_pills">
+			<div class="pills-list">
+				<span>{% if project.codingLanguages|length > 1 %}Languages:{% else %}Language:{% endif %}</span>
+				{% for codingLanguage in project.codingLanguages %}
+					<a class="pill" href="{{ path('coding_language_projects', {'slug': codingLanguage.slug}) }}">
+						{{ codingLanguage.label }}
+					</a>
+				{% endfor %}
+			</div>
+		</div>
+	{% endif %}
+	
+	{% if project.headline is not null %}
+		<div class="show_headline">{{ project.headline }}</div>
+	{% endif %}
+
+	<hr>
+
+	<div class="show_content">{{ project.content|raw }}</div>
+
+	{% if project|hasApprovedAuthor %}
+		<div class="show_author">
+			{% include "_parts/card/author.html.twig" with {
+			'author': project.author
+		} %}
+		</div>
+	{% endif %}
+
+	{% if config('SHOW_COMMENTS_ON_PROJECT') %}
+		{% include "_parts/comments_section.html.twig" with {postType: project} %}
+	{% endif %}
 
 {% endblock %}
